# src/main/java/exercise/exercise/web/filter/AuthFilter.java
@@ -1,7 +1,8 @@
 package exercise.exercise.web.filter;
 
 import exercise.exercise.di.DependencyGraphConfiguration;
-import exercise.exercise.domain.model.User;
+import exercise.exercise.web.mapper.UserMapperWeb;
+import exercise.exercise.web.model.UserWeb;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -16,12 +17,14 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.Collections;
+
 /**
  * Фильтр аутентификации, который проверяет учетные данные пользователей
  * из заголовка Authorization и устанавливает контекст безопасности.
  */
 public class AuthFilter extends GenericFilterBean {
     private final DependencyGraphConfiguration context;
+
     /**
      * Конструктор, инициализирующий фильтр с контекстом зависимостей.
      *
@@ -30,13 +33,14 @@ public class AuthFilter extends GenericFilterBean {
     public AuthFilter(DependencyGraphConfiguration context) {
         this.context = context;
     }
+
     /**
      * Метод фильтрации, который проверяет учетные данные пользователей.
      * Если путь запроса соответствует аутентификации, пропускает запрос дальше.
      * В противном случае выполняет аутентификацию пользователя.
      *
-     * @param req  объект запроса
-     * @param res  объект ответа
+     * @param req   объект запроса
+     * @param res   объект ответа
      * @param chain цепочка фильтров
      * @throws IOException      если произошла ошибка ввода-вывода
      * @throws ServletException если произошла ошибка сервлета
@@ -47,48 +51,55 @@ public class AuthFilter extends GenericFilterBean {
         HttpServletRequest request = (HttpServletRequest) req;
         HttpServletResponse response = (HttpServletResponse) res;
         String path = request.getRequestURI();
-        if (path.startsWith("/auth/register") || path.startsWith("/auth/login")) {
+
+        if (path.startsWith("/auth/register") || path.startsWith("/auth/login"))
             chain.doFilter(req, res);
-        } else {
+
+        else {
             try {
                 String[] creds = extractCredentials(request.getHeader("Authorization"));
-                User user = context.userService().authenticate(creds[0], creds[1])
+                UserWeb user = UserMapperWeb.INSTANCE.toWeb(context.userService().authenticate(creds[0], creds[1]))
                         .orElseThrow(() -> new SecurityException("Unauthorized"));
 
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(user, null, Collections.emptyList());
+                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(user, null,
+                        Collections.emptyList());
                 SecurityContextHolder.getContext().setAuthentication(authentication);
                 chain.doFilter(req, res);
+
             } catch (Exception e) {
                 response.sendError(HttpServletResponse.SC_UNAUTHORIZED);
             }
         }
     }
+
     /**
      * Извлекает учетные данные из заголовка Authorization.
      *
      * @param header заголовок Authorization
      * @return массив строк, содержащий логин и пароль
-     * @throws IllegalArgumentException если заголовок недействителен или формат учетных данных неверен
+     * @throws IllegalArgumentException если заголовок недействителен или формат
+     *                                  учетных данных неверен
      */
     private String[] extractCredentials(String header) {
-        if (header == null || !header.startsWith("Basic ")) {
+        if (header == null || !header.startsWith("Basic "))
             throw new IllegalArgumentException("Invalid Authorization header");
-        }
+
         String base64Credentials = header.substring("Basic ".length()).trim();
+        
         byte[] decodedBytes;
         try {
             decodedBytes = Base64.getDecoder().decode(base64Credentials);
         } catch (IllegalArgumentException e) {
             throw new IllegalArgumentException("Failed to decode Base64 credentials", e);
         }
+
         String credentials = new String(decodedBytes, StandardCharsets.UTF_8);
         int colonIndex = credentials.indexOf(':');
-        if (colonIndex == -1) {
+        if (colonIndex == -1)
             throw new IllegalArgumentException("Invalid credentials format");
-        }
+
         String login = credentials.substring(0, colonIndex);
         String password = credentials.substring(colonIndex + 1);
-        return new String[]{login, password};
+        return new String[] { login, password };
     }
 }
